--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,13 @@
 @tailwind utilities;
 
 
-/* 
+
 @layer base {
-  button {
-    @apply border border-black rounded-xl px-5 py-1
+  html {
+    font-family: Montserrat, sans-serif;
   }
+
+  /* button {
+    @apply border border-black rounded-xl px-5 py-1
+  } */
 }
-*/
