--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,15 @@
 
 
 @layer base {
+
+
   html {
     font-family: Montserrat, sans-serif;
+  }
+
+  body {
+    overflow-x: hidden;
+    background: white;
   }
 
   @media only screen and (max-width: 999px) {
