--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,6 @@
 
 
 @layer base {
-
-
   html {
     font-family: Montserrat, sans-serif;
   }
@@ -14,6 +12,10 @@
   body {
     overflow-x: hidden;
     background: white;
+  }
+
+  p {
+    line-height: 1.7;
   }
 
   @media only screen and (max-width: 999px) {
